# reliableGPT

./: .env  .gitignore  .gm  .pre-commit-config.yaml  Makefile  README.md  context_window_test.json  main.py  push_update.txt  pyproject.toml  setup.py  tests.py
.github/: dependabot.yml
.github/workflows/: ci.yaml
examples/: Azure_OpenAI_Model_Switching_demo.ipynb  Build_custom_model_fallback_strategy_w_Langchain,_Replit.ipynb  Building_a_reliable_Website_QA_Bot_Builder.ipynb  SlackAlerts.ipynb  UseModelFallBacks (1).ipynb  UseModelFallBacks.ipynb  Use_OpenAI_Model_Switching_to_handle_Azure_OpenAI_ReadTimeout_Errors.ipynb  Using_Caching_to_handle_high_traffic_LLM_Apps_without_dropping_requests.ipynb  Using_a_hot_(in_memory)_+_hosted_cache_to_prevent_dropped_customer_requests_in_prod_(LLM_Apps)_.ipynb
reliableGPT.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
reliablegpt/: APICallHandler.py  CustomQueue.py  IndividualRequest.py  KeyManagement.py  Model.py  RateLimitHandler.py  ReliableDataLoaders.py  __init__.py  alerting.py  api_handler.py  cache.py  cache_decorator.py  constants.py  individual_request.py  key_management.py  main.py  model.py  push_update.txt  reliable_query.py  settings.py  test_batching.py  test_krrish.py  test_satya.py  tests.py  tests_main.py
reliablegpt/tests/: berri_test.py  test_Alerting.py  test_AsyncAzureEndpoint.py  test_AzureEndpoints.py  test_Embedding.py  test_IndividualRequest.py  test_KeyManagement.py  test_Model.py  test_RateLimitHandler.py  test_ReliableDataLoaders.py  test_Router.py  test_reliable_query.py
reliablegpt/tests/test_Caching/: loadtest.py  server.py
test_Caching/: server.py
tests/: berri_test.py  context_window_test.json  test_Individual.py  test_alerting.py  test_azure_endpoints.py  test_individual.py  test_individual_request.py  test_krrish.py  test_model.py  test_package.py  test_q.py  test_rate_limit_handler.py  test_reliable_query.py  test_router.py  tests.py
tests/test_caching/: server.py
tests/test_unhandled_error_alerting/: server.py
(+6 files in other folders)
