[tool.poetry]
name = "reliableGPT"
version = "0.2.945"
description = "Error handling and auto-retry library for GPT"
authors = ["Ishaan Jaffer <ishaan@berri.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6.0,<3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "0.27.8"
termcolor = "2.3.0"
resend = "0.5.1"
tiktoken = "^0.4.0"
posthog = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
