[tool.poetry]
name = "reliableGPT"
version = "0.2.945"
description = "Error handling and auto-retry library for GPT"
authors = ["Ishaan Jaffer <ishaan@berri.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<=3.11"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
openai = "0.27.8"
termcolor = "2.3.0"
resend = "0.5.1"
tiktoken = "^0.4.0"
posthog = "^3.0.1"
pydantic = "^1.9.1"
redis = { version = "4.6.0", optional = true }
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"
ruff = "^0.0.278"
black = "^23.7.0"
pytest = "^7.4.0"
isort = "^5.12.0"

[tool.poetry.extras]
redis-cache = ["redis"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
line-length = 120
select = ["E", "F", "I"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "*migrations*",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
